test/simulated-iot-cloud-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simulated-iot-cloud-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simulated-iot-cloud-svc
spec:
  hosts:
  - "*"
  gateways:
  - simulated-iot-cloud-gateway
  http:
  - match:
    - uri:
        prefix: /v1/generateSensorData
    route:
    - destination:
        host: ms-iot.default.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /v1/detectAnomaly
    route:
    - destination:
        host: ms-anomaly-detection.default.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /v1/predict
    route:
    - destination:
        host: ms-prediction.default.svc.cluster.local
        subset: v1
        port:
          number: 8080
      weight: 80
    - destination:
        host: ms-prediction.default.svc.cluster.local
        subset: v2
        port:
          number: 8080
      weight: 20
  - match:
    - uri:
        prefix: /v1/assessPredictions
    - uri:
        prefix: /v1/getAccuratePrediction
    - uri:
        prefix: /v1/getValidPredictions
    route:
    - destination:
        host: ms-analytics.default.svc.cluster.local
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-prediction-canary-deployment
spec:
  host: ms-prediction.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
